--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
 body{
-    color:coral;
-    text-align: center;
+    color:rgb(146, 163, 108);
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rgb(48, 3, 3);
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
 }
