--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,41 @@
 body{
-    color:rgb(146, 163, 108);
+    color:rgb(0, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
+
+
+#cabecera{
+    background: #33f;
+    box-shadow: 0px 5px 20px 0px rgb(45, 42, 40);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+
+#cabecera #tagline{
+    padding:  0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+
 #container {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid rgb(48, 3, 3);
+    
     margin: 0 auto;
 }
 
 #container h1 {
     font-size: 20px;
+}
+
+#past{
+    padding: 1em;
 }
