--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
-    color:rgb(146, 163, 108);
+    color:rgb(0, 0, 0);
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
 }
 
@@ -9,7 +9,7 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid rgb(48, 3, 3);
+    border: 1px solid rgb(255, 0, 0);
     margin: 0 auto;
 }
 
