--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
-    color:rgb(0, 0, 0);
+    color:rgb(255, 224, 224);
     text-align: left;
-
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
