--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,30 @@
 body{
-    color:rgb(255, 224, 224);
-    text-align: left;
+    background: rgb(0, 0, 0)
+    color rgb(109, 3, 3)
+    text-align left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
+#nave {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    
+}
 
 
 #cabecera{
-    background: #33f;
+    background: darkcyan;
     box-shadow: 0px 5px 20px 0px rgb(45, 42, 40);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
 
 }
+
+
 
 #cabecera #tagline{
     padding:  0 0 0 1em;
@@ -28,7 +37,7 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid rgb(255, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
     
     margin: 0 auto;
 }
