--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,9 @@
-/*body{
-<<<<<<< HEAD
+body{
     color:rgb(18, 18, 18);
     text-align: left;
-=======
-
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    background-color: aqua;
+    background-color: aquamarine;
 }
 
 #nave {
@@ -20,20 +17,16 @@
 #cabecera{
     background: darkcyan;
     box-shadow: 0px 5px 20px 0px rgb(45, 42, 40);
-    color: rgb(255, 0, 0);
+    color: rgb(194, 254, 16);
     font-weight: bold;
     margin: 0;
     padding: 0.5em 0 0.5em 2em;
 
 }
 
-<<<<<<< HEAD
 #contenido {
   background-color: blueviolet;
 }
-=======
-
->>>>>>> header
 
 #cabecera #tagline{
     padding:  0 0 0 1em;
@@ -57,9 +50,9 @@
 
 #past{
     padding: 1em;
-}*/
+}
 
-body{
+/*body{
     color:rgb(152, 0, 0);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -106,4 +99,4 @@ body{
     background:#777 ;
     color:white ;
     text-align: center;
-}
+}*/
