--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,6 +52,12 @@ body{
     padding: 1em;
 }
 
+#footer {
+    background:#777 ;
+    color:white ;
+    text-align: center;
+}
+
 /*body{
     color:rgb(152, 0, 0);
     text-align: left;
@@ -95,8 +101,4 @@ body{
     padding: 1em;
 }
 
-#footer {
-    background:#777 ;
-    color:white ;
-    text-align: center;
-}*/
+*/
